--- a/assignments/a1/a1_834.tex
+++ b/assignments/a1/a1_834.tex
@@ -300,7 +300,7 @@ while level < depth:
 
 \end{lstlisting}
 
-Figure \ref{fig:crawler} shows the crawling process that happens when we run the crawler using  \url{http://www.cs.odu.edu/~mln/} as the seed and the number of recursive calls = 1. Figure \ref{fig:url} shows the extracted links resulted from the crawling process. 
+Figure \ref{fig:crawler} shows the crawling process that happens when we run the crawler using  \url{http://www.cs.odu.edu/~mln/} as the seed and the number of recursive calls = 2. Figure \ref{fig:url} shows the extracted links resulted from the crawling process. 
 
 
 \begin{figure}[H]
@@ -327,7 +327,7 @@ Figure \ref{fig:crawler} shows the crawling process that happens when we run the
 
 \end{figure} 
 
-All outputs resulted from the crawling process (including the downloaded html pages and the list of extracted links) are uploaded to github under directory assignments/a1/crawling\_output. 
+All outputs resulted from the crawling process (including the downloaded html pages and the list of extracted links) are uploaded to github under directory assignments/a1/crawling\_output and crawling\_output2. 
 
 \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 
