--- a/assignments/a2/biblio.bib
+++ b/assignments/a2/biblio.bib
@@ -1,3 +1,12 @@
+@misc{krovetz-python,
+	title={{KrovetzStemmer 0.4}},
+	author={Ruey-Cheng Chen},
+	year={2016},
+	howpublished = 
+	{\url{https://pypi.python.org/pypi/KrovetzStemmer/0.4}},
+	note = "[Online; accessed 12-October-2016]"
+}
+
 @misc{rosetta,
 	title={{Inverted index}},
 	author={RosettaCode.org},
@@ -14,6 +23,15 @@
 	howpublished = 
 	{\url{https://www.r-project.org/}},
 	note = "[Online; accessed 12-October-2016]"
+}
+
+@misc{nltk-porter,
+	title={{nltk.stem package}},
+	author={NLTK Project},
+	year={2016},
+	howpublished = 
+	{\url{http://www.nltk.org/api/nltk.stem.html#module-nltk.stem.porter}},
+	note = "[Online; accessed 11-October-2016]"
 }
 
 @misc{nltk,
