--- a/assignments/a2/biblio.bib
+++ b/assignments/a2/biblio.bib
@@ -1,3 +1,12 @@
+@misc{nls,
+	title={{First steps with Non-Linear Regression in R}},
+	author={Lionel Hertzog},
+	year={2016},
+	howpublished = 
+	{\url{https://www.r-bloggers.com/first-steps-with-non-linear-regression-in-r/}},
+	note = "[Online; accessed 12-October-2016]"
+}
+
 @misc{krovetz-python,
 	title={{KrovetzStemmer 0.4}},
 	author={Ruey-Cheng Chen},
